Version 0.1.1 (tzdata v2005q) - 18-Dec-2005
-------------------------------------------

* Timezones that are defined by a single unbounded period (e.g. UTC) now 
  work again.
* Updated to tzdata version 2005q.

Version 0.1.0 (tzdata v2005n) - 27-Nov-2005
-------------------------------------------

* period_for_local and local_to_utc now allow resolution of ambiguous
  times (e.g. when switching from daylight savings to standard time). 
  The behaviour of these methods when faced with an ambiguous local time
  has now changed. If you are using these methods you should check
  the documentation. Thanks to Cliff Matthews for suggesting this change.
* Added require 'date' to timezone.rb (date isn't loaded by default in all
  environments).
* Use rake to build packages and documentation.
* License file is now included in gem distribution.
* Dates in definitions stored as Astronomical Julian Day numbers rather than
  as civil dates (improves performance creating DateTime instances).
* Added options to TZDataParser to allow generation of specific zones and
  countries.
* Moved TimezonePeriod class to timezone_period.rb.
* New TimezonePeriodList class to store TimezonePeriods for a timezone and
  perform searches for periods.
* Timezones now defined using blocks. TimezonePeriods are only instantiated
  when they are needed. Thanks to Jamis Buck for the suggestion.
* Add options to TZDataParser to allow exclusion of specific zones and 
  countries.
* Exclude the Riyadh Solar Time zones. The rules are only for 1987 to 1989 and
  take a long time to generate and process. Riyadh Solar Time is no longer
  observed.
* The last TimezonePeriod for each Timezone is now written out with an
  unbounded rather than arbitrary end time.
* Construct the Rational offset in TimezonePeriod once when the TimezonePeriod
  is constructed rather than each time it is needed.
* Timezone and Country now keep a cache of loaded instances to avoid running